--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,3 +120,20 @@ services:
     volumes:
       - ./service/users-service:C:\app\src
       - ./libs:C:\app\libs
+
+  role-service:
+    build:
+      context: .
+      dockerfile: development.Dockerfile
+    image: microservices-workshop/role-service:dev
+    restart: on-failure
+    environment:
+      DB_HOST: 10.33.30.5  # 🔹 your PostgreSQL on host
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: ExZ3naPw@32!perts
+      DB_NAME: postgres
+      COTE_DISCOVERY_REDIS_HOST: 10.33.30.5   # 🔹 Redis discovery same
+    volumes:
+      - ./service/role-service:C:\app\src
+      - ./libs:C:\app\libs      
