--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,145 +1,3 @@
-# version: '3'
-
-# services:
-
-#   api-gateway:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/api-gateway:dev
-#     restart: on-failure
-#     environment:
-#       - VIRTUAL_HOST=api-gateway.app.com
-#     ports:
-#       - 3000:3000
-#     volumes:
-#       - ./api-gateway:/app/src
-#       - ./libs:/src/libs   
-
-
-#   users-service:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/users-service:dev
-#     restart: on-failure
-#     environment:
-#       DB_HOST: postgres-db
-#       DB_PORT: 5432
-#       DB_USER: postgres
-#       DB_PASSWORD: ExZ3naPw@32!perts
-#       DB_NAME: postgres
-#     volumes:
-#       - ./service/users-service:/app/src
-#       - ./libs:/app/libs       # <-- added libs mapping
-#     depends_on:
-#       - postgres-db
-
-#   postgres-db:
-#     image: stefanscherer/postgres-windows:9.6
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: ExZ3naPw@32!perts
-#       POSTGRES_DB: postgres
-#     ports:
-#       - "5432:5432"             # <-- changed to standard port
-#     volumes:
-#       - postgres-data:/var/lib/postgresql/data
-
-# volumes:
-#   postgres-data:
-
-
-# version: '3'
-
-# services:
-#   api-gateway:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/api-gateway:dev
-#     restart: on-failure
-#     environment:
-#       - VIRTUAL_HOST=api-gateway.app.com
-#     ports:
-#       - 3000:3000
-#     volumes:
-#       - ./api-gateway:C:\app\src
-#       - ./libs:C:\app\libs 
-
-#   users-service:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/users-service:dev
-#     restart: on-failure
-#     environment:
-#       DB_HOST: host.docker.internal   # connects to your local PostgreSQL
-#       DB_PORT: 5432
-#       DB_USER: postgres
-#       DB_PASSWORD: ExZ3naPw@32!perts
-#       DB_NAME: postgres
-      
-#     volumes:
-#       - ./service/users-service:C:\app\src
-#       - ./libs:C:\app\libs
-
-
-
-# version: '3'
-
-# services:
-#   api-gateway:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/api-gateway:dev
-#     restart: on-failure
-#     environment:
-#       - VIRTUAL_HOST=api-gateway.app.com
-#       - COTE_DISCOVERY_REDIS_HOST=10.33.30.5   # 🔹 Redis on Windows host
-#     ports:
-#       - 3000:3000
-#     volumes:
-#       - ./api-gateway:C:\app\src
-#       - ./libs:C:\app\libs
-
-#   users-service:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/users-service:dev
-#     restart: on-failure
-#     environment:
-#       DB_HOST: 10.33.30.5  # 🔹 your PostgreSQL on host
-#       DB_PORT: 5432
-#       DB_USER: postgres
-#       DB_PASSWORD: ExZ3naPw@32!perts
-#       DB_NAME: postgres
-#       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5   # 🔹 Redis discovery same
-#     volumes:
-#       - ./service/users-service:C:\app\src
-#       - ./libs:C:\app\libs
-
-#   role-service:
-#     build:
-#       context: .
-#       dockerfile: development.Dockerfile
-#     image: microservices-workshop/role-service:dev
-#     restart: on-failure
-#     environment:
-#       DB_HOST: 10.33.30.5  # 🔹 your PostgreSQL on host
-#       DB_PORT: 5432
-#       DB_USER: postgres
-#       DB_PASSWORD: ExZ3naPw@32!perts
-#       DB_NAME: postgres
-#       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5   # 🔹 Redis discovery same
-#     volumes:
-#       - ./service/role-service:C:\app\src
-#       - ./libs:C:\app\libs      
-
-
-
 version: '3'
 
 services:
@@ -159,14 +17,13 @@ services:
       - ./api-gateway:C:\app\src
       - ./libs:C:\app\libs
     depends_on:
-      - users-service
-      - role-service
+      - admin-service
 
-  users-service:
+  admin-service:
     build:
       context: .
       dockerfile: development.Dockerfile
-    image: microservices-workshop/users-service:dev
+    image: microservices-workshop/admin-service:dev
     restart: on-failure
     environment:
       DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
@@ -177,23 +34,7 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/users-service:C:\app\src
+      - ./service/admin-service:C:\app\src
       - ./libs:C:\app\libs
 
-  role-service:
-    build:
-      context: .
-      dockerfile: development.Dockerfile
-    image: microservices-workshop/role-service:dev
-    restart: on-failure
-    environment:
-      DB_HOST: 10.33.30.5
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: ExZ3naPw@32!perts
-      DB_NAME: postgres
-      COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
-      COTE_DISCOVERY_REDIS_PORT: 6379
-    volumes:
-      - ./service/role-service:C:\app\src
-      - ./libs:C:\app\libs
+ 
