--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "body-parser": "^1.20.3",
     "cote": "^1.2.0",
     "crypto-js": "^4.2.0",
