--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
-      DB_NAME: postgres
+      DB_NAME: eparts_core
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
