--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./api-gateway:C:\app\src
-      - ./libs:C:\app\libs
+      - ./api-gateway:C:/app/src
+      - ./libs:C:/app/libs
       - C:/Mani/logfile:/app/logs  
     depends_on:
       - admin-service
@@ -35,11 +35,11 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/admin-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/admin-service:C:/app/src
+      - ./libs:C:/app/libs
       - C:/Mani/logfile:/app/logs  
 
-    buyer-service:
+  buyer-service:
     build:
       context: .
       dockerfile: development.Dockerfile
@@ -54,11 +54,11 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/buyer-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/buyer-service:C:/app/src
+      - ./libs:C:/app/libs
       - C:/Mani/logfile:/app/logs  
 
-    seller-service:
+  seller-service:
     build:
       context: .
       dockerfile: development.Dockerfile
@@ -73,8 +73,8 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/seller-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/seller-service:C:/app/src
+      - ./libs:C:/app/libs
       - C:/Mani/logfile:/app/logs  
 
  
