--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./api-gateway:C:/app/src
       - ./libs:C:/app/libs
-      - C:/Mani/logfile:/app/logs  
+      - C:/EPARTS/eparts_dev_files:/app/logs  
     depends_on:
       - admin-service
 
@@ -37,7 +37,7 @@ services:
     volumes:
       - ./service/admin-service:C:/app/src
       - ./libs:C:/app/libs
-      - C:/Mani/logfile:/app/logs  
+      - C:/EPARTS/eparts_dev_files:/app/logs  
 
   buyer-service:
     build:
@@ -56,7 +56,7 @@ services:
     volumes:
       - ./service/buyer-service:C:/app/src
       - ./libs:C:/app/libs
-      - C:/Mani/logfile:/app/logs  
+      - C:/EPARTS/eparts_dev_files:/app/logs  
 
   seller-service:
     build:
@@ -75,6 +75,6 @@ services:
     volumes:
       - ./service/seller-service:C:/app/src
       - ./libs:C:/app/libs
-      - C:/Mani/logfile:/app/logs  
+      - C:/EPARTS/eparts_dev_files:/app/logs  
 
  
