--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     volumes:
       - ./api-gateway:C:/app/src
       - ./libs:C:/app/libs
-      - C:/EPARTS/eparts_dev_files:/app/logs  
+      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
+      - "C:/EPARTS/eparts_dev_files/assets:/app/assets"
     depends_on:
       - admin-service
 
@@ -37,7 +38,8 @@ services:
     volumes:
       - ./service/admin-service:C:/app/src
       - ./libs:C:/app/libs
-      - C:/EPARTS/eparts_dev_files:/app/logs  
+      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
+      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
 
   buyer-service:
     build:
@@ -56,7 +58,8 @@ services:
     volumes:
       - ./service/buyer-service:C:/app/src
       - ./libs:C:/app/libs
-      - C:/EPARTS/eparts_dev_files:/app/logs  
+      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
+      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
 
   seller-service:
     build:
@@ -73,8 +76,9 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/seller-service:C:/app/src
-      - ./libs:C:/app/libs
-      - C:/EPARTS/eparts_dev_files:/app/logs  
+      - "./service/seller-service:C:/app/src"
+      - "./libs:C:/app/libs"
+      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
+      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
 
  
