--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ services:
     restart: on-failure
     environment:
       - VIRTUAL_HOST=api-gateway.app.com
-      - COTE_DISCOVERY_REDIS_HOST=10.33.30.5      # 🔹 Redis running on your Windows host
-      - COTE_DISCOVERY_REDIS_PORT=6379             # 🔹 Explicit Redis port (recommended)
+      - COTE_DISCOVERY_REDIS_HOST=10.33.30.5
+      - COTE_DISCOVERY_REDIS_PORT=6379
     ports:
       - "3000:3000"
     volumes:
-      - ./api-gateway:C:/app/src
-      - ./libs:C:/app/libs
-      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
-      - "C:/EPARTS/eparts_dev_files/assets:/app/assets"
+      - "./api-gateway:/app/src"
+      - "./libs:/app/libs"
+      - logs-data:/app/logs
+      - assets-data:/app/assets
     depends_on:
       - admin-service
 
@@ -28,7 +28,7 @@ services:
     image: microservices-workshop/admin-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -36,10 +36,10 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/admin-service:C:/app/src
-      - ./libs:C:/app/libs
-      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
-      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
+      - "./service/admin-service:/app/src"
+      - "./libs:/app/libs"
+      - logs-data:/app/logs
+      - assets-data:/app/assets
 
   buyer-service:
     build:
@@ -48,7 +48,7 @@ services:
     image: microservices-workshop/buyer-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -56,10 +56,10 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/buyer-service:C:/app/src
-      - ./libs:C:/app/libs
-      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
-      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
+      - "./service/buyer-service:/app/src"
+      - "./libs:/app/libs"
+      - logs-data:/app/logs
+      - assets-data:/app/assets
 
   seller-service:
     build:
@@ -68,7 +68,7 @@ services:
     image: microservices-workshop/seller-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -76,9 +76,11 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - "./service/seller-service:C:/app/src"
-      - "./libs:C:/app/libs"
-      - "C:/EPARTS/eparts_dev_files/logfile:/app/logs"
-      - "C:/EPARTS/eparts_dev_files/assets:/app/assets" 
+      - "./service/seller-service:/app/src"
+      - "./libs:/app/libs"
+      - logs-data:/app/logs
+      - assets-data:/app/assets
 
- 
+volumes:
+  logs-data:
+  assets-data:
