--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     restart: on-failure
     environment:
       - VIRTUAL_HOST=api-gateway.app.com
-      - COTE_DISCOVERY_REDIS_HOST=10.33.30.5      # 🔹 Redis running on your Windows host
-      - COTE_DISCOVERY_REDIS_PORT=6379             # 🔹 Explicit Redis port (recommended)
+      - COTE_DISCOVERY_REDIS_HOST=10.33.30.5     
+      - COTE_DISCOVERY_REDIS_PORT=6379            
     ports:
       - "3000:3000"
     volumes:
-      - ./api-gateway:C:\app\src
-      - ./libs:C:\app\libs
-
+      - ./api-gateway:C:/app/src
+      - ./libs:C:/app/libs
+ 
     depends_on:
       - admin-service
 
@@ -27,7 +27,7 @@ services:
     image: microservices-workshop/admin-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5          
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -35,18 +35,17 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/admin-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/admin-service:C:/app/src
+      - ./libs:C:/app/libs 
 
-
-    buyer-service:
+  buyer-service:
     build:
       context: .
       dockerfile: development.Dockerfile
     image: microservices-workshop/buyer-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5         
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -54,17 +53,17 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/buyer-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/buyer-service:C:/app/src
+      - ./libs:C:/app/libs
 
-    seller-service:
+  seller-service:
     build:
       context: .
       dockerfile: development.Dockerfile
     image: microservices-workshop/seller-service:dev
     restart: on-failure
     environment:
-      DB_HOST: 10.33.30.5          # 🔹 PostgreSQL running on Windows host
+      DB_HOST: 10.33.30.5         
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: ExZ3naPw@32!perts
@@ -72,7 +71,7 @@ services:
       COTE_DISCOVERY_REDIS_HOST: 10.33.30.5
       COTE_DISCOVERY_REDIS_PORT: 6379
     volumes:
-      - ./service/seller-service:C:\app\src
-      - ./libs:C:\app\libs
+      - ./service/seller-service:C:/app/src
+      - ./libs:C:/app/libs
 
  
