--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "cote": "^1.2.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
