--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes:
       - ./api-gateway:C:/app/src
       - ./libs:C:/app/libs
+      - C:/EPARTS/EPARTS_PRODUCTION_FILES/assets:/app/assets
     depends_on:
       - admin-service
 
@@ -36,6 +37,7 @@ services:
     volumes:
       - ./service/admin-service:C:/app/src
       - ./libs:C:/app/libs 
+      - C:/EPARTS/EPARTS_PRODUCTION_FILES/assets:/app/assets
 
   buyer-service:
     build:
